# bf-interpreter

./: .gitignore  CMakeLists.txt  NOTICE  README.md  bf.cpp
.github/workflows/: build.yml  test.yml
include/bf/: bf.hpp
src/: bf.cpp  bf.hpp
test/: CMakeLists.txt  instructions_test.cpp  sample_test.cpp
test/sample/: hello.bf  hello.debug0.txt  hello.debug1.txt  nextchars.bf  nextchars.out.txt
